...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/matchName"
        android:layout_width="282dp"
        android:layout_height="85dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:lineSpacingExtra="14sp"
...
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profileButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:scaleType="centerCrop"
            android:src="@mipmap/profile"
            app:layout_constraintEnd_toEndOf="parent"
...
