...
                android:text="TextView"
                android:textSize="25dp"
                app:layout_constraintStart_toEndOf="@+id/textView40"
                app:layout_constraintTop_toBottomOf="@+id/textView20" />

            <Button
                android:id="@+id/report_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="Report"
...
